fix content overflow in historyCard issue, cosmetic improvments

--- a/exam/src/components/Header/Header.module.scss
+++ b/exam/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline: 10px;
+  padding-inline: 30px;
   padding-block: 4px;
 
   box-shadow: 1px 2px 4px 0px var(--color-gray-outline);
